<resources>
    <string name="app_name">FootFitStore</string>
    <string name="default_web_client_id">589743616563-1t5rdk98mlm2rgvah64kcs16dnerdeoj.apps.googleusercontent.com</string>
    <string name="hello_again">
        Hello Again!
    </string>
    <string name="fill_your_d">
        Fill Your Details Or Continue With\nSocial Media
    </string>
    <string name="email_addre">
        Email Address
    </string>
    <string name="password">
        Password
    </string>
    <string name="btn_Sign_in">
        Sign In
    </string>
    <string name="btn_Sign_google">
        Sign in with Google
    </string>
    <string name="new_user_cr">
        New User? Create Account
    </string>
    <string name="recovery_password">
        Recovery Password?
    </string>
    <string name="forgot_pass">
        Forgot Password
    </string>
    <string name="enter_your_">
        Enter Your Email Account To Reset Your Password
    </string>
    <string name="register_ac">
        Register Account
    </string>
    <string name="your_name">
        Your Name
    </string>
    <string name="already_hav">
        Already Have Account? Log In
    </string>
    <string name="check_your_">
        Check your email
    </string>
    <string name="we_have_sen">
        We Have Send Password Recovery Code In Your Email
    </string>
    <string name="submit">
        OK
    </string>
    <string name="Size">Size: </string>
    <string name="Success">Your Payment Is Successful</string>
    <string name="back_to_shopping">Back to Shopping</string>
    <string name="ct_info">Contact Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="Cancelled">Your Payment Has Been Cancelled</string>
    <string name="Error">Sorry! Something Wrong Happens</string>
    <string name="add_to_cart">Successfully Add To Cart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>