<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/alert_box">
    <ImageView
        android:paddingTop="30dp"
        android:id="@+id/imageMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sendmail"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/check_your_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/check_your_"
        android:textAppearance="@style/check_your_"
        android:translationY="-0.61sp" />
    <TextView
        android:id="@+id/we_have_sen"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.25"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/we_have_sen"
        android:textAppearance="@style/we_have_sen"
        android:lineSpacingExtra="-4sp"
        android:gravity="center_horizontal|top"
        />

    <Button
        android:text="@string/submit"
        android:id="@+id/pos_button"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_height="50dp"
        android:layout_width="70dp"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        />
</LinearLayout>